<?xml version="1.0" encoding="utf-8"?>

<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.tesis.prueba.view.CreateAccountActivity">

    <include layout="@layout/actionbar_toolbar"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/activity_vertical_margin"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/editTextBlack"
            android:layout_marginTop="@dimen/dimenEditTextMargin">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/idCorreo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_email"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/editTextBlack"
                android:layout_marginTop="@dimen/dimenEditTextMargin">


                <android.support.design.widget.TextInputEditText
                    android:id="@+id/idUsuario"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_NombreUsuario"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/editTextBlack"
                android:layout_marginTop="@dimen/dimenEditTextMargin">


                <android.support.design.widget.TextInputEditText
                    android:id="@+id/idContraseña_createAccount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_Contraseña"
                    android:inputType="textPassword"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/editTextBlack"
                android:layout_marginTop="@dimen/dimenEditTextMargin">


                <android.support.design.widget.TextInputEditText
                    android:id="@+id/idConfirmarContraseña"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_ConfirmPassword"
                    android:inputType="textPassword"/>

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/idBtnJoinUs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textButtonUnete"
                android:theme="@style/buttonLoginDark"
                />




        </LinearLayout>
    </ScrollView>

</android.support.design.widget.CoordinatorLayout>