<?xml version="1.0" encoding="utf-8"?>

<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="com.tesis.prueba.Login">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1">

        <RelativeLayout
        android:id="@+id/idRLPrincipal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.7">

        <ImageView
         android:id="@+id/logo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
         android:background="@drawable/parquimetro_df"/>

        <TextView
        android:id="@+id/idTVBienvenido"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Bienvenido!"
        android:layout_centerHorizontal="true" />

        </RelativeLayout>


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:fillViewport="true"
            >
        <LinearLayout
            android:id="@+id/idLLDatosUsuario"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/dimenHorizontalLogin"
            >

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/editText">


               <android.support.design.widget.TextInputEditText
                    android:id="@+id/idUserName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_NombreUsuario"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/editText">


                <android.support.design.widget.TextInputEditText
                    android:id="@+id/idContraseña"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_Contraseña"
                    android:inputType="textPassword"/>

            </android.support.design.widget.TextInputLayout>


            <Button
                android:id="@+id/idBtnLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textButtonLogin"
                android:theme="@style/buttonLoginDark"
                android:onClick="goCreateContainer"
                />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                >
                <TextView
                    android:id="@+id/idDontHaveAccount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/strDontHaveAccount"
                    android:textColor="@android:color/white"
                    android:textStyle="bold"
                    android:textSize="@dimen/dimenDontHaveAccount" />

                <TextView
                    android:id="@+id/idCreateHere"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/strCreateHere"
                    android:textColor="@android:color/white"
                    android:textStyle="bold"
                    android:textSize="@dimen/dimenDontHaveAccount"
                    android:layout_toRightOf="@+id/idDontHaveAccount"
                    android:onClick="goCreateAccount"
                    />

            </RelativeLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>


</android.support.design.widget.CoordinatorLayout>